--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "author" : "Dan Nielsen <dnielsen@reachmail.com>",
-  "name" : "node-cracklib",
+  "name" : "cracklib",
   "description" : "NodeJS access to cracklib functions",
   "keywords": [ "password", "cracklib", "libcrack" ],
-  "version": "0.1.3",
+  "version": "0.1.4",
+  "main": "index.js",
   "homepage": "https://github.com/danielsen/node-cracklib",
   "repository": {
     "type": "git",
