--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "author" : "Dan Nielsen <dnielsen@reachmail.com>",
   "name" : "cracklib",
   "description" : "NodeJS access to cracklib functions",
-  "keywords": [ "password", "cracklib", "libcrack" ],
-  "version": "0.1.4",
+  "keywords": [ "password", "cracklib", "libcrack", "security" ],
+  "version": "0.1.5",
   "main": "index.js",
   "homepage": "https://github.com/danielsen/node-cracklib",
   "repository": {
